--- a/FellowshipWeb/Views/People/Addresses.cshtml
+++ b/FellowshipWeb/Views/People/Addresses.cshtml
@@ -8,9 +8,12 @@
 <table>
 	<thead>
 		<tr>
+			<th>Address Type</th>
 			<th>Address</th>
 			<th>City</th>
+			<th>County/Parish</th>
 			<th>State/Provence</th>
+			<th>Country</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -18,13 +21,22 @@
 {
 		<tr class="linkable"  onclick="window.document.location = '@Url.Action("Details", "Address", new { id = item.Id })'" >
 			<td>
+				@item.AddressType
+			</td>
+			<td>
 				@item.Address1
 			</td>
 			<td>
 				@item.City
 			</td>
 			<td>
+				@item.County
+			</td>
+			<td>
 				@item.StateOrProvence
+			</td>
+			<td>
+				@item.Country
 			</td>
 		</tr>
 }
