--- a/FellowshipWeb/Content/Site.css
+++ b/FellowshipWeb/Content/Site.css
@@ -9,7 +9,7 @@ body
 {
 	font-size: 75%;
 	font-family: Verdana, Tahoma, Arial, "Helvetica Neue", Helvetica, Sans-Serif;
-	color: #232323;
+	color: #333;
 	background-color: #fff;
 }
 
@@ -91,7 +91,7 @@ textarea
 
 .linkable:hover
 {
-	background-color: #FC9;
+	background-color: #CFF;
 }
 
 .alternate-row
