--- a/FellowshipWeb/Views/People/Search.cshtml
+++ b/FellowshipWeb/Views/People/Search.cshtml
@@ -5,6 +5,9 @@
 }
 
 <h2>@ViewBag.Title</h2>
+
+@Html.ValidationSummary()
+
 @using (Html.BeginForm("Search", "People", FormMethod.Get, new { id = "search" }))
 {
 <label for="name" title="Find Users with Name" >Name:</label>
@@ -12,15 +15,18 @@
 <input id="search" type="submit" value="Search" />
 }
 
-@if (Model.Count == 0)
+@if (Model != null)
 {
+	if (Model.Count == 0)
+	{
 	<div class="message">
 	@Html.Partial("NoPeopleFound", Model)
 	</div>
-}
-else
-{	
+	}
+	else
+	{	
 	<div class="results">
 	@Html.Partial("SearchResults", Model)
 	</div>
+	}
 }
