--- a/FellowshipWeb/Content/Site.css
+++ b/FellowshipWeb/Content/Site.css
@@ -54,6 +54,10 @@ textarea
 	margin:0.5em 0 0 0;
 }
 
+.display-footer
+{
+	margin-top: 1.5em;
+}
 
 /* Styles for validation helpers
 -----------------------------------------------------------*/
@@ -103,6 +107,7 @@ table
 {
 	border-collapse: collapse;
 }
+
 td, th
 {
 	padding-right:50px;
