--- a/FellowshipWeb/Views/People/Communications.cshtml
+++ b/FellowshipWeb/Views/People/Communications.cshtml
@@ -4,39 +4,13 @@
 	ViewBag.Title = "Communications";
 }
 
-<h2>Communications</h2>
+<h2>@ViewBag.Title</h2>
 
 @Html.ValidationSummary()
 
 @if (Model != null)
 {
-<table>
-	<thead>
-		<tr>
-			<th>Type</th>
-			<th>Value</th>
-			<th>Is Listed</th>
-			<th>Last Updated</th>
-		</tr>
-	</thead>
-	<tbody>
-@foreach (var item in Model)
-{
-		<tr>
-			<td>
-				@( item.CommunicationType != null ? item.CommunicationType.Name : string.Empty)
-			</td>
-			<td>
-				@item.CommunicationValue
-			</td>
-			<td>
-				@item.Listed
-			</td>
-			<td>
-				@item.LastUpdatedDate
-			</td>
-		</tr>
-}
-	</tbody>
-</table>
+	<div>
+	@Html.Partial("CommunicationsListing")
+	</div>
 }
