--- a/FellowshipWeb/Views/People/Search.cshtml
+++ b/FellowshipWeb/Views/People/Search.cshtml
@@ -1,4 +1,4 @@
-﻿@model FellowshipLib.People
+﻿@model FellowshipLib.PeopleSearchResults
 
 @{
 	ViewBag.Title = "PeopleSearch";
@@ -8,21 +8,18 @@
 @using (Html.BeginForm("Search", "People", FormMethod.Get, new { id = "search" }))
 {
 <label for="name" title="Find Users with Name" >Find users with name</label>
-<input type="text" name="name" value="@ViewBag.SearchCriteria" />
+<input type="text" name="name" value="@Model.SearchName" />
 <input id="search" type="submit" value="Search" />
 }
 <table>
 	<tr>
-		<th></th>
 		<th>Last Name</th>
 		<th>First Name</th>
+		<th>Middle Name</th>
 	</tr>
 
 @foreach (var item in Model) {
-	<tr>
-		<td>
-			@Html.ActionLink("Details", "Details", new { id=item.Id }) 
-		</td>
+	<tr class="linkable"  onclick="window.document.location = '@Url.Action("Details", new { id = item.Id })'" >
 		<td>
 			@item.LastName
 		</td>
@@ -30,7 +27,7 @@
 			@item.FirstName
 		</td>
 		<td>
-			@Html.ActionLink("View Household", "Household", new { id=item.HouseholdId })
+			@item.MiddleName
 		</td>
 	</tr>
 }
@@ -43,14 +40,14 @@
 
 		@if (Model.PageNumber > 1)
 		{
-			@Html.ActionLink("Previous", "Search", new { name = ViewBag.SearchCriteria, pageNumber = Model.PageNumber - 1 })
+			@Html.ActionLink("Previous", "Search", new { name = Model.SearchName, pageNumber = Model.PageNumber - 1 })
 		}
 		<input type="text" name="pageNumber" value="@Model.PageNumber" /> of @Model.TotalPages()
-		<input type="hidden" name="name" value="@ViewBag.SearchCriteria" />
+		<input type="hidden" name="name" value="@Model.SearchName" />
 		<input type="hidden" name="maxPageNumber" value="@Model.TotalPages()" />
 		@if (Model.PageNumber < Model.TotalPages())
 		{
-			@Html.ActionLink("Next", "Search", new { name = ViewBag.SearchCriteria, pageNumber = Model.PageNumber + 1 })
+			@Html.ActionLink("Next", "Search", new { name = Model.SearchName, pageNumber = Model.PageNumber + 1 })
 		}
 	</div>
 }
