--- a/FellowshipWeb/Content/Site.css
+++ b/FellowshipWeb/Content/Site.css
@@ -27,12 +27,22 @@ textarea
     min-height: 75px;
 }
 
-.editor-label 
+.editor-label, .display-label 
 {
     margin: 1em 0 0 0;
 }
 
-.editor-field 
+.editor-field, .display-field 
+{
+    margin:0.5em 0 0 0;
+}
+
+.display-label 
+{
+    font-weight:bolder;
+}
+
+.display-field 
 {
     margin:0.5em 0 0 0;
 }
