renamed class PersonQuery to PersonSearch

--- a/FellowshipWeb/Views/People/Search.cshtml
+++ b/FellowshipWeb/Views/People/Search.cshtml
@@ -1,7 +1,7 @@
-﻿@model FellowshipLib.PeopleSearchResults
+﻿@model FellowshipLib.PersonSearchResults
 
 @{
-	ViewBag.Title = "PeopleSearch";
+	ViewBag.Title = "Find Person by Name";
 }
 
 <h2>PeopleSearch</h2>
