--- a/FellowshipWeb/Views/People/Search.cshtml
+++ b/FellowshipWeb/Views/People/Search.cshtml
@@ -4,50 +4,24 @@
 	ViewBag.Title = "Find Person by Name";
 }
 
-<h2>PeopleSearch</h2>
+<h2>@ViewBag.Title</h2>
 @using (Html.BeginForm("Search", "People", FormMethod.Get, new { id = "search" }))
 {
 <label for="name" title="Find Users with Name" >Find users with name</label>
 <input type="text" name="name" value="@Model.SearchName" />
 <input id="search" type="submit" value="Search" />
 }
-<table>
-	<tr>
-		<th>Last Name</th>
-		<th>First Name</th>
-		<th>Middle Name</th>
-	</tr>
-
-@foreach (var item in Model) {
-	<tr class="linkable"  onclick="window.document.location = '@Url.Action("Details", new { id = item.Id })'" >
-		<td>
-			@item.LastName
-		</td>
-		<td>
-			@item.FirstName
-		</td>
-		<td>
-			@item.MiddleName
-		</td>
-	</tr>
-}
-</table>
-
-@using (Html.BeginForm("Search", "People", FormMethod.Get, new { id = "search" }))
+<div class="results">
+@if (Model.Count == 0)
 {
-	<div class="tableFooter">
-			Page
-
-		@if (Model.PageNumber > 1)
-		{
-			@Html.ActionLink("Previous", "Search", new { name = Model.SearchName, pageNumber = Model.PageNumber - 1 })
-		}
-		<input type="text" name="pageNumber" value="@Model.PageNumber" /> of @Model.TotalPages()
-		<input type="hidden" name="name" value="@Model.SearchName" />
-		<input type="hidden" name="maxPageNumber" value="@Model.TotalPages()" />
-		@if (Model.PageNumber < Model.TotalPages())
-		{
-			@Html.ActionLink("Next", "Search", new { name = Model.SearchName, pageNumber = Model.PageNumber + 1 })
-		}
+	<div>
+	@Html.Partial("NoPeopleFound", Model)
 	</div>
 }
+else
+{	
+	<div>
+	@Html.Partial("SearchResults", Model)
+	</div>
+}
+</div>
