Adding People Addresses listing stub

--- a/FellowshipWeb/Views/People/Details.cshtml
+++ b/FellowshipWeb/Views/People/Details.cshtml
@@ -16,6 +16,7 @@
 	<div class="display-field">@Model.DateOfBirth</div>
 	<div class="display-label">Occupation</div>
 	<div class="display-field">@(Model.Occupation != null ? Model.Occupation.Name : string.Empty)</div>
-	@Html.ActionLink("View Household", "Details", "Household", new { id = Model.HouseholdID }, new { })
+	View @Html.ActionLink("Household", "Details", "Household", new { id = Model.HouseholdID }, new { }) |
+	@Html.ActionLink("Addresses", "Addresses", "People", new { id = Model.Id }, new { })
 </fieldset>
 
